err/nd.semanticcore.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/nd'...
Listing './lib/python3.5/site-packages/nd/semanticcore'...
Compiling './lib/python3.5/site-packages/nd/semanticcore/average.py'...
***   File "./lib/python3.5/site-packages/nd/semanticcore/average.py", line 43
    print "%-20s" % name, value
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/nd/semanticcore/cloudcompare.py'...
***   File "./lib/python3.5/site-packages/nd/semanticcore/cloudcompare.py", line 47
    print word
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/nd/semanticcore/semanticcore.py'...
***   File "./lib/python3.5/site-packages/nd/semanticcore/semanticcore.py", line 45
    print __doc__
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/nd/semanticcore/text2vector.py'...
***   File "./lib/python3.5/site-packages/nd/semanticcore/text2vector.py", line 51
    print name, Text2Vector()(open(name).read())
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nd/semanticcore/tfidf.py'...
***   File "./lib/python3.5/site-packages/nd/semanticcore/tfidf.py", line 31
    print word,S
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/nd/semanticcore/vectorcompare.py'...
***   File "./lib/python3.5/site-packages/nd/semanticcore/vectorcompare.py", line 20
    return sorted(v3.items(),lambda (x1,y1),(x2,y2) : cmp(y2,y1))
                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nd.semanticcore-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
